--- a/resume.html
+++ b/resume.html
@@ -4,43 +4,43 @@
     <title>Maxim Wittek::resume</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="resume.css">
-    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="resume.js" type="text/javascript"></script>
 </head>
 <body>
-<div id="main">
+<div id="might_as_well_be_body">
 
-    <div class="section" id="header">
-        <div class="float_left" id="name">Maxim Wittek</div>
-        <div class="float_right" id="date">May 2013</div>
+    <div id="sidebar" class="float_left">
+            <div id="name">Maxim Wittek</div>
+            <div id="title">Software Engineer</div>
+            <div id="objective">
+                I am looking for a full-time position in the software development field, 
+                working on interesting projects with a team that's enthusiastic about their products.
+            </div>
+
     </div>
 
-    <div class="section" id="objective">
-        <div class="header">Objective</div>
-        <div>
-            I am looking for a full-time position in the computer science / software development field, 
-            working on interesting projects with a team that's enthusiastic about what they make.
+    <div id="main" class="float_right">
+
+        <div class="section" id="objective">
+            <div class="header">Experience</div>
+            <span class="subheader">Amazon.com</span> Software Development Engineer
+            <div>Amazon.com</div>
+
+            <div class="subheader">Internship</div>
+            <div>Amazon.com</div>
+            <div>Seattle, WA</div>
+        </div>
+
+        <div class="section" id="contact_info">
+            <div class="header">Contact Info</div>
+            <div>
+                <!-- Loaded in via JS so robots can't get it. -->
+            </div>
         </div>
     </div>
-
-    <div class="section" id="objective">
-        <div class="header">Experience</div>
-        <span class="subheader">Amazon.com</span> Software Development Engineer
-        <div>Amazon.com</div>
-
-        <div class="subheader">Internship</div>
-        <div>Amazon.com</div>
-        <div>Seattle, WA</div>
-    </div>
-
-    <div class="section" id="contact_info">
-        <div class="header">Contact Info</div>
-        <div>
-            <!-- Loaded in via JS so robots can't get it. -->
-        </div>
-    </div>
+    <div class="clear"></div>
+    <div id="date">May 2013</div>
 
 </div>
 </body>
