added edu section

--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
 
     <div id="main" class="float_right">
 
-        <div class="section" id="objective">
+        <div class="section">
             <div class="header">Experience</div>
             <span class="subheader">Amazon.com</span> Software Development Engineer
             <div>Amazon.com</div>
@@ -30,6 +30,11 @@
             <div class="subheader">Internship</div>
             <div>Amazon.com</div>
             <div>Seattle, WA</div>
+        </div>
+
+        <div class="section">
+            <div class="header">Education</div>
+            <span class="subheader">University of Michigan</span> ('12)
         </div>
 
         <div class="section" id="contact_info">
