--- a/resume.html
+++ b/resume.html
@@ -7,46 +7,55 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="resume.js" type="text/javascript"></script>
 </head>
-<body>
-<div id="might_as_well_be_body">
+<body><div id="might_as_well_be_body">
 
     <div id="sidebar" class="float_left">
             <div id="name">Maxim Wittek</div>
-            <div id="title">Software Engineer</div>
-            <div id="objective">
-                I am looking for a full-time position in the software development field, 
-                working on interesting projects with a team that's enthusiastic about their products.
+            <div id="title">Software Engineer.</div>
+            <div class="section" id="contact_info">
+                <div class="header">Contact Info</div>
+                <div>
+                    <!-- Loaded in via JS so robots can't get it. -->
+                </div>
             </div>
-
     </div>
 
     <div id="main" class="float_right">
+        <div class="section">
+            <div class="header">Objective</div>
+            I am looking for a full-time position in the software development field, 
+            working on interesting projects with a team that's enthusiastic about their products.
+        </div>
 
         <div class="section">
             <div class="header">Experience</div>
-            <span class="subheader">Amazon.com</span> Software Development Engineer
-            <div>Amazon.com</div>
 
-            <div class="subheader">Internship</div>
-            <div>Amazon.com</div>
-            <div>Seattle, WA</div>
+            <div class="experience_entry">
+                <span class="subheader">Amazon.com</span> (2012+)
+                <div class="dramatic">Software Development Engineer, Kindle Content Inspection & Automation</div>
+                <div class="prose">
+                    Oh man, I do a lot of stuff.
+                </div>
+            </div>
+
+            <div class="experience_entry">
+                <span class="subheader">Amazon.com</span> (2011)
+                <div class="dramatic">Summer Intern</div>
+                <div class="prose">
+                    Created a brand new Amazon Web Service for redundant, cloud-based scheduling of events.
+                    Took charge of development of the Subscriptions team's internal tool, written in Ruby on Rails.
+                </div>
+            </div>
         </div>
 
         <div class="section">
             <div class="header">Education</div>
-            <span class="subheader">University of Michigan</span> ('12)
+            <span class="subheader">University of Michigan</span> 
         </div>
 
-        <div class="section" id="contact_info">
-            <div class="header">Contact Info</div>
-            <div>
-                <!-- Loaded in via JS so robots can't get it. -->
-            </div>
-        </div>
     </div>
     <div class="clear"></div>
     <div id="date">May 2013</div>
 
-</div>
-</body>
+</div></body>
 </html>
