Added @media screen so it prints correctly

--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@
                 <span class="subheader">Crestron Electronics</span> (2009)
                 <div class="dramatic">SDE Summer Intern</div>
                 <div class="prose">
-                    Joined the Software Architecture Group, which creates the firmware and development tools for Crestron's home automation devices. Worked on the user interface for tablet-sized touch screen devices, and made key contributions to a JavaScript/HTML5 Canvas-based UI framework. Created rich, interactive GUI elements and widgets for said framework. Eventually worked with the trade show team to make a demo presented at CEDIA, the home automation industry's trade show.
+                    Joined the Software Architecture Group, which creates the firmware and development tools for Crestron's home automation devices. Worked on the user interface for tablet-sized touch screen devices, and made key contributions to a JavaScript/HTML5 Canvas-based UI framework. Created rich, interactive GUI elements and widgets for said framework.
                 </div>
             </div>
 
