iPhone @media changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
         <title>github::wittekm</title>
     </head>
     <body>
-        <a href="http://umich.edu/~wittekm">~wittekm at university of michigan</a> <br />
-        <a href="http://github.com/wittekm">wittekm on github</a>
+        <ul style="list-style-type: none; margin: 0; padding: 0;"> <!-- no separate class or css file, so sue me -->
+            <li><a href="resume.html"><strong>Resume!</strong></a></li>
+            <li><a href="http://umich.edu/~wittekm">~wittekm at university of michigan</a></li>
+            <li><a href="http://github.com/wittekm">wittekm on github</a></li>
+        </ul>
     </body>
 </html>
