Minor change. Took out a useless 'skill'.

--- a/resume.html
+++ b/resume.html
@@ -59,7 +59,7 @@
                 <span class="subheader">Amazon.com</span> (2012+)
                 <div class="dramatic">Software Development Engineer</div>
                 <div class="prose">
-                    Member of the Kindle Content Inspection & Automation team, developing technology to ensure that only quality books are made available on the Kindle Store, and that publishers have the rights to the content. Required skills include Java service development, Ruby on Rails development, distributed computing (Amazon SWF), SQL, NoSQL (DynamoDB), and data aggregation.
+                    Member of the Kindle Content Inspection & Automation team, developing technology to ensure that only quality books are made available on the Kindle Store, and that publishers have the rights to the content. Required skills include Java service development, Ruby on Rails development, distributed computing (Amazon SWF), SQL & NoSQL (DynamoDB).
                 </div>
             </div>
 
