Smaller font on email

--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
 
         <div class="section" id="contact-info">
             <div class="header">Contact Info</div>
-            <div id="value-comes-from-js">
+            <div id="value-comes-from-js" class="smaller-font">
                 <!-- Loaded in via JS so robots can't get it. -->
             </div>
             <div>
@@ -31,7 +31,9 @@
             <div class="header">Online</div>
             <ul>
                 <li><a href="https://github.com/wittekm">github.com/wittekm</a></li>
+                <!--
                 <li><a href="http://umich.edu/~wittekm">umich.edu/~wittekm</a></li>
+                -->
                 <li><a href="http://www.linkedin.com/profile/view?id=150319434">LinkedIn</a></li>
             </ul>
         </div>
