--- a/resume.html
+++ b/resume.html
@@ -56,14 +56,13 @@
     <div id="main" class="float_right">
         <div class="section">
             <div class="header">Profile</div>
-            Software developer with extensive experience in building 
+            Full-stack software engineer with 7+ years experience in building 
             <u>distributed services</u>, 
-            <u>frontend experiences</u>, 
-            and <u>native libraries</u>.
-            Full-stack and then some.
+            <u>native libraries</u>,
+            and <u>frontend experiences</u>.
 
-            I'm happiest when developing or maintaining a well-tested, reasonable codebase, with 
-            a team that's passionate about their product.
+            I'm happiest when developing or maintaining a well-tested, reasonable codebase,
+            in an engaging and ethical position (so, an immediate 'no thank you' to adtech or fintech).
         </div>
 
         <div class="section">
