--- a/resume.html
+++ b/resume.html
@@ -62,7 +62,7 @@
             and <u>frontend experiences</u>.
 
             I'm happiest when improving a well-tested, statically typed codebase,
-            at an exciting and ethical company (meaning - <b>an immediate 'no thank you' to adtech or fintech</b> - sorry!).
+            at an exciting and ethical company (meaning - <b>an immediate 'no thank you' to adtech or investment firms</b> - sorry!).
         </div>
 
         <div class="section">
