Update timestamps, new resume pdf

--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,9 @@
                 <li>Relational DBs</li>
                 <li>Graph DBs</li>
                 <li>Time series DBs</li>
+                <br />
                 <li>Python</li>
+                <li>Golang</li>
                 <li>Java</li>
                 <li>Typescript w/ React</li>
                 <li>(rusty) C++14</li>
@@ -175,7 +177,7 @@
 
     </div>
     <div class="clear"></div>
-    <div id="date">Oct 2019</div>
+    <div id="date">Aug 2020</div>
 
 </div></body>
 </html>
