Update LinkedIn link

--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@
                 <!--
                 <li><a href="http://umich.edu/~wittekm">umich.edu/~wittekm</a></li>
                 -->
-                <li><a href="http://www.linkedin.com/profile/view?id=150319434">LinkedIn</a></li>
+                <li><a href="https://www.linkedin.com/in/maxim-wittek-4b641242">LinkedIn</a></li>
             </ul>
         </div>
 
