Update location and skills

--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
                 <!-- Loaded in via JS so robots can't get it. -->
             </div>
             <div>
-                Seattle, WA
+                Brooklyn, NY
             </div>
         </div>
 
@@ -49,12 +49,14 @@
                 <li>Graph DBs</li>
                 <li>Time series DBs</li>
                 <br />
+                <li>Rust</li>
                 <li>Python</li>
+                <li>Typescript w/ React</li>
+                and, once upon a time:
                 <li>Golang</li>
                 <li>Java</li>
-                <li>Typescript w/ React</li>
-                <li>(rusty) C++14</li>
-                <li>(rusty) Ruby w/ Rails</li>
+                <li>C++14</li>
+                <li>Ruby w/ Rails</li>
             </ul>
         </div>
     </div>
