refactor skills list

--- a/resume.html
+++ b/resume.html
@@ -45,14 +45,17 @@
             <br />
             <br />
             <ul>
+                <li>Rust</li>
+                <li>Python</li>
+                <li>Typescript w/ React</li>
+                <br />
+
                 <li>Relational DBs</li>
                 <li>Graph DBs</li>
                 <li>Time series DBs</li>
                 <br />
-                <li>Rust</li>
-                <li>Python</li>
-                <li>Typescript w/ React</li>
-                and, once upon a time:
+
+                (out of practice:)
                 <li>Golang</li>
                 <li>Java</li>
                 <li>C++14</li>
